--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
